<resources>
    <string name="app_name">TestingWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Нет поключения к интернету</string>
    <string name="add_notes">Добавить заметку</string>
    <string name="no_internet_connection">Нет Интернет Соединения</string>
    <string name="no_data">Нет данных</string>
    <string name="title">Заголовок</string>
    <string name="name">Name</string>
    <string name="description">Описание</string>
    <string name="name2">Name</string>
    <string name="new_notes">Новая заметка</string>
    <string name="date">01.01.2022</string>
    <string name="empty">Пусто</string>
    <string name="main_menu">main_menu</string>
</resources>